[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AutoPreprocessor"
version = "0.0.1"
authors = [
  { name="Rohan Sonthalia", email="sonthaliarohan@gmail.com" },
  { name="Nitya Mohta", email="nityamohta1904@gmai.com"},
]
description = "Python library to help automate data preprocessing."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "numpy",
    "seaborn",
    "matplotlib",
    "sklearn",
]

[project.urls]
"Repository" = "https://github.com/rohan-sonthalia/AutoPreprocessor/tree/main"